--- a/index.html
+++ b/index.html
@@ -1,53 +1,34 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>ThisObjectDoesNotExist</title>
-    <script src="https://cdn.jsdelivr.net/npm/@xenova/transformers@3.0.0/dist/transformers.min.js"></script>
-  </head>
-  <body style="margin:0;overflow:hidden;display:flex;align-items:center;justify-content:center;height:100vh;width:100vw;background:#000;">
-    <img id="out" alt="generated object" style="max-width:100%;max-height:100%;object-fit:contain;">
-    <script>
-      let pipe;
-      async function init() {
-        if (pipe) return;
-        window.env = { BACKENDS: ["webgpu","wasm"], CACHE_DIR: "transformers-cache" };
-        const { pipeline } = window.transformers;
-        pipe = await pipeline("text-to-image", "stabilityai/sdxl-turbo");
+<head>
+  <meta charset="utf-8">
+  <title>ThisObjectDoesNotExist</title>
+  <script src="https://cdn.jsdelivr.net/npm/@xenova/transformers@3.1.0/dist/transformers.min.js"></script>
+</head>
+<body style="margin:0;overflow:hidden;display:flex;align-items:center;justify-content:center;height:100vh;width:100vw;background:#000;">
+  <img id="out" alt="generated object" style="max-width:100%;max-height:100%;object-fit:contain;">
+  <script>
+    (async () => {
+      window.env = { BACKENDS: ["webgpu","wasm"], CACHE_DIR: "tfjs-cache" };
+      const { pipeline } = window.transformers;
+      const pipe = await pipeline("text-to-image", "deepseek-ai/Janus-1.3B");
+      const result = await pipe("a random everyday object", { width:512, height:512, num_inference_steps:2 });
+      let blob, img = result.images?.[0];
+      if (img instanceof Blob) blob = img;
+      else if (img instanceof ImageBitmap) {
+        const c = document.createElement("canvas");
+        c.width = img.width; c.height = img.height;
+        c.getContext("2d").drawImage(img,0,0);
+        blob = await new Promise(r => c.toBlob(r,"image/png"));
+      } else if (img instanceof HTMLImageElement) {
+        const r = await fetch(img.src);
+        blob = await r.blob();
+      } else if (result.toDataURL) {
+        const r = await fetch(result.toDataURL());
+        blob = await r.blob();
       }
-      async function generate() {
-        await init();
-        const result = await pipe("a random everyday object", {
-          width: 512, height: 512, num_inference_steps: 2, guidance_scale: 0.0
-        });
-
-        let blob;
-        if (result && result.images && result.images[0]) {
-          const imgOut = result.images[0];
-          if (imgOut instanceof Blob) {
-            blob = imgOut;
-          } else if (imgOut instanceof ImageBitmap) {
-            const c = document.createElement("canvas");
-            c.width = imgOut.width; c.height = imgOut.height;
-            c.getContext("2d").drawImage(imgOut,0,0);
-            blob = await new Promise(r => c.toBlob(r,"image/png"));
-          } else if (imgOut instanceof HTMLImageElement) {
-            const response = await fetch(imgOut.src);
-            blob = await response.blob();
-          }
-        } else if (result && result.toDataURL) {
-          const res = await fetch(result.toDataURL());
-          blob = await res.blob();
-        }
-
-        if (blob) {
-          const url = URL.createObjectURL(blob);
-          document.getElementById("out").src = url;
-        } else {
-          document.getElementById("out").alt = "Generation failed";
-        }
-      }
-      generate();
-    </script>
-  </body>
+      if (blob) document.getElementById("out").src = URL.createObjectURL(blob);
+    })();
+  </script>
+</body>
 </html>
